Hephzibah, Mike (bug fix): fixed broken css relating to dual select box buttons

--- a/src/web/styles/styles.css
+++ b/src/web/styles/styles.css
@@ -666,4 +666,8 @@ img.studentImage{
     display: none;
 }
 
+.dualSelectBoxButtons {
+    width: 90px;
+}
+
 
